# farmer-backend

./: README.md  frontend.md  main.py  pyproject.toml
.chromadb/: chroma.sqlite3
db_design/: api_usage_stats.sql  audit_logs.sql  chat-history.sql  conversation_shares.sql  conversation_snapshots.sql  conversation_tags.sql  conversations.sql  documents.sql  file_processing_queue.sql  notifications.sql  system_settings.sql  tags.sql  user_preference.sql  users.sql
src/: auth.py  config.py  database.py  hybrid_search.py  intent_classifier.py  loader.py  models.py  rag.py  vector.py
src/routes/: auth.py  chat.py  conversations.py  documents.py  users.py
